# ba-thesis

./: README.md
baseline/Conv-TasNet/: .gitignore  Datasets.py  Loss.py  dataset.py  datasets.py  eval.py  lightning.py  main.py  model.py  multi_scale_spectral.py  pyproject.toml  train.py  train.yml
baseline/Conv-TasNet-PreTrain/: pyproject.toml
baseline/Conv-TasNet_MSE/: .gitignore  datasets.py  loss.py  model.py  pyproject.toml  seed.py  train.py
baseline/Conv-TasNet_OLD/: Datasets.py  Loss.py  lightning.py  model.py  train.yml
baseline/dry-test-data/wsj0_derev/: log_stats.txt
baseline/storm/: .gitignore  enhancement.py  gettestdata.py  main.py  pyproject.toml
baseline/storm/preprocessing/: create_data.py
baseline/storm/sgmse/backbones/ncsnpp_utils/op/: fused_act.py  upfirdn2d.py
datasets/audio-set/: main.py  pyproject.toml
datasets/freesound/: .gitignore
preprocessing/convolution/: main.py  offline.py  process.py  pyproject.toml
preprocessing/parameter-reverb/: .gitignore  constants.py  main.py  parameter_reverb.py  pyproject.toml
preprocessing/room_simulation/: offline.py  process.py  pyproject.toml
thesis/: metadata.typ  proposal.typ  thesis.bib  thesis.typ
thesis/content/: background.typ  conclusion.typ  experiments.typ  methodology.typ  requirements.typ  results.typ  system_design.typ
thesis/content/proposal/: gantt.yaml  introduction.typ  motivation.typ  objective.typ  problem.typ  schedule.typ
thesis/layout/: cover.typ  disclaimer.typ  proposal_template.typ  thesis_template.typ  titlepage.typ
thesis/utils/: open_questions.typ  todo.typ
