[project]
name = "conv-tasnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pedalboard>=0.9.21",
    "pytorch-lightning>=2.6.0",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
