[project]
name = "storm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py==3.6.0",
    "matplotlib==3.5.2",
    "ninja>=1.13.0",
    "numpy==1.21.6",
    "pandas==1.3.5",
    "pesq==0.0.4",
    "pyroomacoustics==0.6.0",
    "pysoundfile==0.9.0.post1",
    "pystoi==0.3.3",
    "pytorch-lightning==1.8.3",
    "scipy==1.7.3",
    "sdeint==0.2.4",
    "soundfile==0.10.3.post1",
    "tensorboard==2.9.0",
    "torch==1.11.0",
    "torch-ema==0.3",
    "torchaudio==0.11.0",
    "tqdm==4.63.0",
]
